--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <script>
             function openFun() {
                 let side =document.getElementById('slide');
-               side.style.width='125px'
+               side.style.width='100%';
                 
             }
              function closeFun() {
