--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
         <script>
             function openFun() {
                 let side =document.getElementById('slide');
-                document.querySelector('.stroke').display="none";
+                document.querySelector('.stroke').style.display="none";
                side.style.width='50%';
                 
             }
              function closeFun() {
                document.getElementById('slide').style.width="0";
-               document.querySelector('.stroke').display="block";
+               document.querySelector('.stroke').style.display="block";
                }
         </script>
     </body>
