--- a/teft.html
+++ b/teft.html
@@ -110,7 +110,7 @@
     <script>
         function openFun() {
             let side =document.getElementById('slide');
-           side.style.width='125px'
+           side.style.width='50%';
             
         }
          function closeFun() {
