--- a/omali.html
+++ b/omali.html
@@ -118,14 +118,16 @@
             <h4>2022:all rights are reserved</h4>
     </footer>
     <script>
-        function openFun() {
-            let side =document.getElementById('slide');
-           side.style.width='50%'
-            
-        }
-         function closeFun() {
-           document.getElementById('slide').style.width="0";
-           }
-    </script>
+            function openFun() {
+                let side =document.getElementById('slide');
+                document.querySelector('.stroke').style.display="none";
+               side.style.width='50%';
+                
+            }
+             function closeFun() {
+               document.getElementById('slide').style.width="0";
+               document.querySelector('.stroke').style.display="block";
+               }
+        </script
 </body>
 </html>    
