--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>The daily buzz</title>
-        <meta name="description" content="This is the description">
+        <meta name="description" content="The daily news content ">
+        <meta name="keywords" content="The daily buzz, bobore, github">
         <meta name="viewport" content="width= device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css" />
         <script src="calcu.js" async></script>
